# fastapi-operations

./: README.md
src/: pyproject.toml
src/workshop/: __main__.py  app.py  database.py  settings.py  tables.py
src/workshop/api/: __init__.py  operations.py
src/workshop/models/: operations.py
src/workshop/services/: operations.py
