[tool.poetry]
name = "fastapi-workshop"
version = "0.1.0"
description = ""
authors = ["Amir <abub.amir@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
black = "^21.4b2"
python-dotenv = "^0.17.0"
SQLAlchemy = "^1.4.12"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 120


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
